--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -14,7 +14,7 @@
           <p> <%= @flat.max_people %> max people </p>
         </div>
         <h2 class="card-trip-pricing"> <%= @flat.price.to_i %>€ </h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        <%= cl_image_tag current_user.photo.key, class:"avatar",style: "position: relative; top: -100px;"  %>
       </div>
     </div>
 
