--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -34,7 +34,7 @@
               <% end %>
         </div>
         <h2 class="card-trip-pricing-booking"> <%= @booking.flat.price.to_i %>€ </h2>
-        <img src="https://static.cnews.fr/sites/default/files/styles/image_750_422/public/2nfuf6u63rclboxnb3wss5mvw4_62d969f27ee0e_0.jpg?itok=TykdQPKY" class="card-trip-user-booking avatar-bordered" />
+        <%= cl_image_tag current_user.photo.key, class:"avatar",style: "position: relative; top: -100px;"  %>
       </div>
     </div>
 </div>
