--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="banner-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://c.wallhere.com/photos/f5/53/face_selective_coloring_red_eyes_black_background-7680.jpg!d)">
-  My Bookings
+  <h2 style="color: white"><strong>My Bookings</strong></h2>
 </div>
 
 
