--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-<h1 style="text-align:center; margin-bottom:20px">Create your own Creepy House</h1>
+<h1 style="text-align:center; margin-bottom: 35px"><strong>Create your own Creepy House</strong></h1>
 
 
 <%= simple_form_for(@flat, html: { class: "flat-form form-shadow" }) do |f| %>
