--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -4,7 +4,7 @@
     <h1><strong>Welcome to your worst nightmare</strong></h1>
     <h4>Step into darkness...</p>
 
-    <div class="cards">
+    <div class="cards mt-5">
       <% @flats.each do |flat| %>
       <div class="card-category">
         <div >
@@ -17,10 +17,10 @@
           </div>
           <div>
             <div class="d-flex justify-content-center mt-3">
-              <p><%= flat.max_people %></p>
-              <i class="fa-solid fa-user ms-1"></i>
+              <p class="strong"><%= flat.max_people %></p>
+              <i class="fa-solid fa-user ms-1" style="font-size: 16px"></i>
             </div>
-            <p class="mb-0 mt-3"><%= flat.price.to_i %>€</p>
+            <p class="mb-0 mt-5"><%= flat.price.to_i %>€</p>
           </div>
         </div>
       </div>
