--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h1>Votre maison hantée</h1>
 
-    <div class="card-trip col-8">
+    <div class="card-trip col-8 mt-4">
       <%= cl_image_tag @flat.photo.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
       <div class="card-trip-infos">
         <div>
@@ -14,11 +14,11 @@
           <p> <%= @flat.max_people %> max people </p>
         </div>
         <h2 class="card-trip-pricing"> <%= @flat.price.to_i %>€ </h2>
-        <%= cl_image_tag current_user.photo.key, class:"avatar",style: "position: relative; top: -100px;"  %>
+        <%= cl_image_tag @flat.user.photo.key, class:"avatar",style: "position: relative; top: -100px;"  %>
       </div>
     </div>
 
-    <div class="form-container col-4">
+    <div class="form-container col-4 mt-4">
       <p class="btn-ghost" style="color: white; text-align: center">Choose dates</p>
       <%= render 'form', flat: @flat, booking: @booking %>
       <div class="map"
